# calibre-web

./: .dockerignore  .editorconfig  .eslintrc  .gitattributes  .gitignore  .key  .pre-commit-config.yaml  .railwayignore  .travis.yml  AI_MODULE_REPORT.md  AI_MODULE_TEST_REPORT.md  AI_MODULE_UML_DIAGRAMS.md  API.py  CONTRIBUTING.md  Calibre-web_otapiGems.pyproj  Calibre-web_otapiGems.sln  Descript.ion  Dockerfile  INSTALACION_AUDIOLIBROS.md  LICENSE.txt  MANIFEST.in  NUEVAS_FUNCIONALIDADES.md  Procfile  RAILWAY_DEPLOYMENT.md  README.md  README_AUDIOBOOK.md  SECURITY.md  TEMA_PROFESIONAL.md  add_audiobook_styles.py  app.db  app.db-shm  app.db-wal  app.db_07062025  apply_all_improvements.py  appspec.yml  babel.cfg  build.sh  client_secrets.json  config.ini  config.ini.example  (+49 more)
.github/: FUNDING.yml  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: Build.yaml  IntegrationTest.yaml  PP.yaml  build-and-push.yml  ci.yml  integration-tests.yml  preproduction-tests.yml  triggerTest.yaml
book_parsing_agent/: QUICKSTART.md  README.md  agent.py  book_parser.py  requirements.txt
book_parsing_agent/examples/: basic_usage.py  quickstart.py  search_example.py
book_parsing_agent/sample_books/: alice_in_wonderland.epub  test_book.epub
counter-service/: counter_service.py  requirements.txt
counterService/: Dockerfile  counter_service.py
cps/: MyLoginManager.py  __init__.py  __main__.py  about.py  achievements.py  admin.py  admin_stats.py  api.py  asyncmail.py  audio.py  babel.py  basic.py  book_formats.py  cache_buster.py  clean_html.py  cli.py  comic.py  config.py  config_sql.py  constants.py  converter.py  cover.py  cw_babel.py  db.py  debug_info.py  dep_check.py  editbooks.py  editpage.py  embed_helper.py  epub.py  epub_helper.py  epub_kindle_fixer.py  error_handler.py  fb2.py  file_helper.py  fs.py  gdrive.py  gdriveutils.py  gevent_wsgi.py  gmail.py  (+50 more)
cps/crawler/: crawler_service.py  downloader.py  gutenberg_fetcher.py  gutenberg_popular.py  saver.py
cps/cw_advocate/: __init__.py  adapters.py  addrvalidator.py  api.py  connection.py  connectionpool.py  exceptions.py  poolmanager.py
cps/cw_login/: __init__.py  config.py  login_manager.py  mixins.py  signals.py  utils.py
cps/metadata_provider/: amazon.py  comicvine.py  douban.py  goodreads.py  google.py  hardcover.py  lubimyczytac.py  scholar.py  toogle.py
cps/services/: Metadata.py  SyncToken.py  __init__.py  background_scheduler.py  deepseek_ai.py  gmail.py  goodreads_support.py  hardcover.py  oauth.py  simpleldap.py  worker.py
cps/static/: mimetypes.txt
cps/static/css/: admin_stats.css  annotations.css  basic.css  bookshelf.css  bootstrap.css  caliBlur-style.css  caliBlur.css  caliBlur.min.css  caliBlur_override.css  colors.css  custom-fixes.css  dark-reader.css  epub_themes.css  fonts.css  fractionslider.css  jquery.vegas.css  kthoom.css  listen.css  magnific-popup.css  main.css  material-theme.css  modern.css  normalize.css  popup.css  professional-dark.css  professional.css  reader.css  standard_dark.css  style.css  text.css  typeaheadjs.css  upload.css
cps/static/gitbook/: gitbook.js  style.css  theme.js
cps/static/js/: ai.js  archive.js  (+45 more)
cps/tasks/: audiobook.py  audiobook.py.backup  clean.py  convert.py  database.py  download.py  email.py  gdrive_send.py  mail.py  metadata_backup.py  metadata_extract.py  shelfsync.py  tempFolder.py  thumbnail.py  upload.py
cps/templates/: achievements.html  admin.html  admin_audiobooks.html  admin_duplicates.html  admin_statistics.html  author.html  authors.html  basic_detail.html  basic_index.html  basic_layout.html  book_cover.html  book_edit.html  book_exists_flash.html  book_table.html  categories.html  category_tree.html  config_db.html  config_edit.html  config_view_edit.html  converting.html  detail.html  discover.html  edit_book.html  edit_page.html  email_edit.html  feed.xml  fragment.html  gdrive_send_edit.html  generate_kobo_auth_url.html  grid.html  http_error.html  image.html  index.html  index.xml  json.txt  languages.html  layout.html  list.html  list_pages.html  listenmp3.html  (+30 more)
cps/translations/: iso639.pickle
dockerinit/: app.db  gdrive.db  metadata.db  metadata_db_prefs_backup.json
docs/: gdrive-send.md
html/: Dribbble - Streamnation Homepage Design by Julien Renvoye.webloc  StreamNation.webloc  index.html  index2.html
html/css/: entypo.css  fonts.css  style.css
html/js/: main.js  plugins.js
html/less/: colors.less  fonts.less  style.less
lib/: configobj.py  flask_principal.py
lib/blinker/: base.py
lib/jinja2/: __init__.py  environment.py  filters.py  runtime.py
lib/markupsafe/: tests.py
lib/sqlalchemy/: __init__.py  events.py  exc.py  processors.py  types.py
lib/sqlalchemy_fulltext/: modes.py
lib/wand/: compat.py  resource.py  sequence.py
lib/werkzeug/: _internal.py  exceptions.py  formparser.py  local.py  routing.py  useragents.py  utils.py  wsgi.py
massages/: file_10.txt  file_13.txt  file_15.txt  file_16.txt  file_17.txt  file_2.txt  file_20.txt  file_3.txt  file_5.txt  file_6.txt  file_9.txt
messages/: file_1.txt  file_11.txt  file_12.txt  file_14.txt  file_18.txt  file_19.txt  file_21.txt  file_22.txt  file_4.txt  file_7.txt  file_8.txt
root/defaults/: policy.xml
scripts/: calibre-web-nginx.conf  extract_jinja_contexts.py  install_dependencies  jinja_contexts.json  lb-wrapper  lb-wrapper.greedy  omg.yml  start_server  stop_server
test/: Calibre-Web TestSummary.html  Calibre-Web TestSummary_Linux.html  Calibre-Web TestSummary_Windows.html  TestHelperFunctions.py  calibre-standard-users.jmx  test_counter_service.py  test_helpers.py
test/css/: runner.css
test/js/: runner.js
tests/: test_helper.py
tests/api/: test_crawler_api.py
tests/crawler/: test_crawler_service.py  test_downloader.py  test_gutenberg_fetcher.py  test_gutenberg_popular.py  test_saver.py
views/: books.tpl  details.tpl  feed.tpl
views/css/: component.css  default.css  style.css  style.less
views/js/: books1.js  plugins.js
web/: calibre-web.apache.conf  calibre-web.nginx.conf
(+482 files in other folders)
