[bdist_wheel]
universal = 1

[metadata]
name = calibreweb
url = https://github.com/janeczku/calibre-web
project_urls =
  Bug Tracker = https://github.com/janeczku/calibre-web/issues
  Release Management = https://github.com/janeczku/calibre-web/releases
  Documentation = https://github.com/janeczku/calibre-web/wiki
  Source Code = https://github.com/janeczku/calibre-web
description = Web app for browsing, reading and downloading eBooks stored in a Calibre database.
long_description = file: README.md
long_description_content_type= text/markdown
author = @OzzieIsaacs
author_email = Ozzie.Fernandez.Isaacs@googlemail.com
maintainer = @OzzieIsaacs
license = GPLv3+
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU Affero General Public License v3
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Operating System :: OS Independent
keywords =
  calibre
  calibre-web
  library
python_requires = >=2.6

[options.entry_points]
console_scripts =
  cps = calibreweb:main
[options]
include_package_data = True
dependency_links = comicapi @ git+https://github.com/OzzieIsaacs/comicapi.git@5346716578b2843f54d522f44d01bc8d25001d24#egg=comicapi
install_requires =
  Babel >= 1.3
  Flask-Babel >= 0.11.1
  Flask-Login >= 0.3.2
  Flask-Principal >= 0.3.2
  singledispatch >= 3.4.0.0
  backports_abc >= 0.4
  Flask >= 0.11
  iso-639 >= 0.4.5
  PyPDF2 == 1.26.0
  pytz >= 2016.10
  requests >= 2.11.1
  SQLAlchemy >= 1.1.0
  tornado >= 4.1
  unidecode >= 0.04.19

[options.extras_require]
gdrive =
  google-api-python-client == 1.6.1
  google-api-python-client==1.6.1
  gevent==1.2.1
  greenlet==0.4.12
  httplib2==0.9.2
  oauth2client==4.0.0
  uritemplate==3.0.0
  pyasn1-modules==0.0.8
  pyasn1==0.1.9
  PyDrive==1.3.1
  PyYAML==3.12
  rsa==3.4.2
  six==1.10.0
goodreads =
  goodreads >= 0.3.2
  python-Levenshtein>=0.12.0
metadata =
  lxml>=3.8.0
  Pillow>=4.0.0
  rarfile>=2.7
  Wand >= 0.4.4
comics=
  natsort>=2.2.0
  # find solution for this should belong to comics
  # comicapi @ git+https://github.com/OzzieIsaacs/comicapi/archive/5346716578b2843f54d522f44d01bc8d25001d24.zip#egg=comicapi



