[metadata]
name = calibreweb
url = https://github.com/janeczku/calibre-web
project_urls =
  Bug Tracker = https://github.com/janeczku/calibre-web/issues
  Release Management = https://github.com/janeczku/calibre-web/releases
  Documentation = https://github.com/janeczku/calibre-web/wiki
  Source Code = https://github.com/janeczku/calibre-web
description = Web app for browsing, reading and downloading eBooks stored in a Calibre database.
long_description = file: README.md
long_description_content_type= text/markdown
author = @OzzieIsaacs
author_email = Ozzie.Fernandez.Isaacs@googlemail.com
maintainer = @OzzieIsaacs
license = GPLv3+
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU Affero General Public License v3
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Operating System :: OS Independent
keywords =
  calibre
  calibre-web
  library
python_requires = >=3.0

[options.entry_points]
console_scripts =
  cps = calibreweb:main
[options]
include_package_data = True
install_requires =
    Babel>=1.3, <3.0
    Flask-Babel>=0.11.1,<2.1.0
    Flask-Login>=0.3.2,<0.5.1
    Flask-Principal>=0.3.2,<0.5.1
    backports_abc>=0.4
    Flask>=1.0.2,<2.1.0
    iso-639>=0.4.5,<0.5.0
    PyPDF3>=1.0.0,<1.0.4
    pytz>=2016.10
    requests>=2.11.1,<2.25.0
    SQLAlchemy>=1.3.0,<1.5.0
    tornado>=4.1,<6.2
    Wand>=0.4.4,<0.7.0
    unidecode>=0.04.19,<1.3.0
    lxml>=3.8.0,<4.7.0

[options.extras_require]
gdrive =
    google-api-python-client>=1.7.11,<2.1.0
    gevent>20.6.0,<21.2.0
    greenlet>=0.4.17,<1.2.0
    httplib2>=0.9.2,<0.20.0
    oauth2client>=4.0.0,<4.1.4
    uritemplate>=3.0.0,<3.1.0
    pyasn1-modules>=0.0.8,<0.3.0
    pyasn1>=0.1.9,<0.5.0
    PyDrive2>=1.3.1,<1.9.0
    PyYAML>=3.12
    rsa>=3.4.2,<4.8.0
    six>=1.10.0,<1.17.0
gmail =
    google-auth-oauthlib>=0.4.3,<0.5.0
    google-api-python-client>=1.7.11,<2.1.0
goodreads =
    goodreads>=0.3.2,<0.4.0
    python-Levenshtein>=0.12.0,<0.13.0
ldap =
    python-ldap>=3.0.0,<3.4.0
    Flask-SimpleLDAP>=1.4.0,<1.5.0
oauth =
    Flask-Dance>=2.0.0,<5.1.0
    SQLAlchemy-Utils>=0.33.5,<0.38.0
metadata =
    rarfile>=2.7
    scholarly>=1.2.0, <1.3
comics =
    natsort>=2.2.0,<7.2.0
    comicapi>= 2.2.0,<2.3.0
kobo =
    jsonschema>=3.2.0,<3.3.0



